--- a/package.json
+++ b/package.json
@@ -25,6 +25,8 @@
     "@ionic/storage": "2.0.1",
     "ionic-angular": "3.1.1",
     "ionicons": "3.0.0",
+    "qr-image": "^3.2.0",
+    "qrcode-svg": "^0.9.0",
     "rxjs": "5.1.1",
     "sw-toolbox": "3.4.0",
     "zone.js": "^0.8.5"
